--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.header,.info{
+  width: 100%;
+  max-width: 38.75rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.line{
+  width: 7rem;
+  padding: 0.1rem;
+}
+.imgDiv img{
+  width: 100%;
+  height: 20rem;
+  max-width: 38.75rem;
+  object-fit: cover;
+  cursor: pointer;
+}
+img:hover{
+  transform: scale(1.05);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box{
+  max-width: 40rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.noTour,.loading{
+  margin-top:20rem;
 }
-
-.App-link {
-  color: #61dafb;
+.price{
+  width: 7rem;
+  text-align: end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active{
+  background-color: rgb(103, 103, 247) !important;
 }
